// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`atoms snapshots > Avatar — custom size + colors + border 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(255,255,0,1.00)",
      "borderBottomColor": "rgba(255,0,255,1.00)",
      "borderBottomLeftRadius": "24px",
      "borderBottomRightRadius": "24px",
      "borderBottomWidth": "2px",
      "borderLeftColor": "rgba(255,0,255,1.00)",
      "borderLeftWidth": "2px",
      "borderRightColor": "rgba(255,0,255,1.00)",
      "borderRightWidth": "2px",
      "borderTopColor": "rgba(255,0,255,1.00)",
      "borderTopLeftRadius": "24px",
      "borderTopRightRadius": "24px",
      "borderTopWidth": "2px",
      "height": "48px",
      "justifyContent": "center",
      "width": "48px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(0,0,0,1.00)",
        "fontFamily": "BitcountPropSingle_700Bold",
        "fontSize": "21.12px",
      }
    }
  >
    M
  </div>
</div>
`;

exports[`atoms snapshots > Avatar — default 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(216,139,116,1.00)",
      "borderBottomColor": "rgba(0,0,0,0.00)",
      "borderBottomLeftRadius": "18px",
      "borderBottomRightRadius": "18px",
      "borderBottomWidth": "0px",
      "borderLeftColor": "rgba(0,0,0,0.00)",
      "borderLeftWidth": "0px",
      "borderRightColor": "rgba(0,0,0,0.00)",
      "borderRightWidth": "0px",
      "borderTopColor": "rgba(0,0,0,0.00)",
      "borderTopLeftRadius": "18px",
      "borderTopRightRadius": "18px",
      "borderTopWidth": "0px",
      "height": "36px",
      "justifyContent": "center",
      "width": "36px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(59,29,18,1.00)",
        "fontFamily": "BitcountPropSingle_700Bold",
        "fontSize": "15.84px",
      }
    }
  >
    A
  </div>
</div>
`;

exports[`atoms snapshots > Badge — default 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "rgba(236,225,200,1.00)",
      "borderBottomLeftRadius": "999px",
      "borderBottomRightRadius": "999px",
      "borderTopLeftRadius": "999px",
      "borderTopRightRadius": "999px",
      "flexDirection": "row",
      "gap": "4px",
      "paddingBottom": "4px",
      "paddingLeft": "9px",
      "paddingRight": "9px",
      "paddingTop": "4px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(217,107,82,1.00)",
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
        "letterSpacing": "0.6px",
        "textTransform": "uppercase",
      }
    }
  >
    New
  </div>
</div>
`;

exports[`atoms snapshots > BlockCard — pressable 1`] = `
<button
  className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
  dir={null}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  role="button"
  style={
    {
      "backgroundColor": "rgba(216,139,116,1.00)",
      "borderBottomLeftRadius": "22px",
      "borderBottomRightRadius": "22px",
      "borderTopLeftRadius": "22px",
      "borderTopRightRadius": "22px",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "paddingBottom": "18px",
      "paddingLeft": "18px",
      "paddingRight": "18px",
      "paddingTop": "18px",
      "transform": "scale(1)",
    }
  }
  tabIndex={0}
  type="button"
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
  >
    Press me
  </div>
</button>
`;

exports[`atoms snapshots > BlockCard — static 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "backgroundColor": "rgba(216,139,116,1.00)",
      "borderBottomLeftRadius": "22px",
      "borderBottomRightRadius": "22px",
      "borderTopLeftRadius": "22px",
      "borderTopRightRadius": "22px",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "paddingBottom": "18px",
      "paddingLeft": "18px",
      "paddingRight": "18px",
      "paddingTop": "18px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
  >
    Card body
  </div>
</div>
`;

exports[`atoms snapshots > CouplRings — custom size + colors 1`] = `
<Svg
  height={64}
  opacity={0.8}
  viewBox="0 0 40 40"
  width={64}
>
  <Circle
    cx={15}
    cy={20}
    fill="none"
    r={11}
    stroke="#f00"
    strokeWidth={2}
  />
  <Circle
    cx={25}
    cy={20}
    fill="none"
    r={11}
    stroke="#00f"
    strokeWidth={2}
  />
</Svg>
`;

exports[`atoms snapshots > CouplRings — default 1`] = `
<Svg
  height={36}
  opacity={1}
  viewBox="0 0 40 40"
  width={36}
>
  <Circle
    cx={15}
    cy={20}
    fill="none"
    r={11}
    stroke="#D88B74"
    strokeWidth={2}
  />
  <Circle
    cx={25}
    cy={20}
    fill="none"
    r={11}
    stroke="#A89BC8"
    strokeWidth={2}
  />
</Svg>
`;

exports[`atoms snapshots > DarkCard — borderless + custom padding 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "backgroundColor": "rgba(255,253,248,1.00)",
      "borderBottomColor": "rgba(216,206,189,1.00)",
      "borderBottomLeftRadius": "22px",
      "borderBottomRightRadius": "22px",
      "borderBottomWidth": "0px",
      "borderLeftColor": "rgba(216,206,189,1.00)",
      "borderLeftWidth": "0px",
      "borderRightColor": "rgba(216,206,189,1.00)",
      "borderRightWidth": "0px",
      "borderTopColor": "rgba(216,206,189,1.00)",
      "borderTopLeftRadius": "22px",
      "borderTopRightRadius": "22px",
      "borderTopWidth": "0px",
      "paddingBottom": "24px",
      "paddingLeft": "24px",
      "paddingRight": "24px",
      "paddingTop": "24px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
  >
    No border
  </div>
</div>
`;

exports[`atoms snapshots > DarkCard — default 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "backgroundColor": "rgba(255,253,248,1.00)",
      "borderBottomColor": "rgba(216,206,189,1.00)",
      "borderBottomLeftRadius": "22px",
      "borderBottomRightRadius": "22px",
      "borderBottomWidth": "1px",
      "borderLeftColor": "rgba(216,206,189,1.00)",
      "borderLeftWidth": "1px",
      "borderRightColor": "rgba(216,206,189,1.00)",
      "borderRightWidth": "1px",
      "borderTopColor": "rgba(216,206,189,1.00)",
      "borderTopLeftRadius": "22px",
      "borderTopRightRadius": "22px",
      "borderTopWidth": "1px",
      "paddingBottom": "18px",
      "paddingLeft": "18px",
      "paddingRight": "18px",
      "paddingTop": "18px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
  >
    Dark body
  </div>
</div>
`;

exports[`atoms snapshots > DateSectioned — third section auto-collapsed 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginBottom": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(216,206,189,1.00)",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "gap": "10px",
          "marginBottom": "8px",
          "paddingBottom": "8px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
        ref={[Function]}
        style={
          {
            "backgroundColor": "rgba(217,107,82,1.00)",
            "borderBottomLeftRadius": "3px",
            "borderBottomRightRadius": "3px",
            "borderTopLeftRadius": "3px",
            "borderTopRightRadius": "3px",
            "height": "6px",
            "width": "6px",
          }
        }
      />
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
            "letterSpacing": "1.6px",
            "textTransform": "uppercase",
          }
        }
      >
        Today
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
            "flex": 1,
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
          }
        }
      >
        1
      </div>
    </div>
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "gap": "10px",
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
      >
        a
      </div>
    </div>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginBottom": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(216,206,189,1.00)",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "gap": "10px",
          "marginBottom": "8px",
          "paddingBottom": "8px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
        ref={[Function]}
        style={
          {
            "backgroundColor": "rgba(217,107,82,1.00)",
            "borderBottomLeftRadius": "3px",
            "borderBottomRightRadius": "3px",
            "borderTopLeftRadius": "3px",
            "borderTopRightRadius": "3px",
            "height": "6px",
            "width": "6px",
          }
        }
      />
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
            "letterSpacing": "1.6px",
            "textTransform": "uppercase",
          }
        }
      >
        Yesterday
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
            "flex": 1,
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
          }
        }
      >
        1
      </div>
    </div>
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "gap": "10px",
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
      >
        b
      </div>
    </div>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginBottom": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
      dir={null}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      ref={[Function]}
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(216,206,189,1.00)",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "gap": "10px",
          "marginBottom": "8px",
          "paddingBottom": "8px",
          "paddingTop": "8px",
        }
      }
      tabIndex={0}
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
        ref={[Function]}
        style={
          {
            "backgroundColor": "rgba(217,107,82,1.00)",
            "borderBottomLeftRadius": "3px",
            "borderBottomRightRadius": "3px",
            "borderTopLeftRadius": "3px",
            "borderTopRightRadius": "3px",
            "height": "6px",
            "width": "6px",
          }
        }
      />
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
            "letterSpacing": "1.6px",
            "textTransform": "uppercase",
          }
        }
      >
        Older
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
            "flex": 1,
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
          }
        }
      >
        3
      </div>
      <div
        className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        dir={null}
        ref={[Function]}
        style={
          {
            "height": "14px",
            "width": "14px",
          }
        }
      >
        <div
          className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
          dir={null}
          ref={[Function]}
          style={
            {
              "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/chevronRight.png")",
              "filter": "url(#tint-14)",
            }
          }
          suppressHydrationWarning={true}
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          ref={
            {
              "current": null,
            }
          }
          src="/Users/tor/Documents/projects/coupl/assets/images/icons/chevronRight.png"
        />
        <svg
          style={
            {
              "height": 0,
              "position": "absolute",
              "visibility": "hidden",
              "width": 0,
            }
          }
        >
          <defs>
            <filter
              id="tint-14"
              suppressHydrationWarning={true}
            >
              <feFlood
                floodColor="#837D8D"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
              />
            </filter>
          </defs>
        </svg>
      </div>
    </div>
    <div
      className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
      dir={null}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      ref={[Function]}
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(216,206,189,1.00)",
          "borderBottomLeftRadius": "14px",
          "borderBottomRightRadius": "14px",
          "borderBottomStyle": "dashed",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(216,206,189,1.00)",
          "borderLeftStyle": "dashed",
          "borderLeftWidth": "1px",
          "borderRightColor": "rgba(216,206,189,1.00)",
          "borderRightStyle": "dashed",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(216,206,189,1.00)",
          "borderTopLeftRadius": "14px",
          "borderTopRightRadius": "14px",
          "borderTopStyle": "dashed",
          "borderTopWidth": "1px",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": "12px",
          "paddingLeft": "14px",
          "paddingRight": "14px",
          "paddingTop": "12px",
        }
      }
      tabIndex={0}
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(88,97,116,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "12px",
          }
        }
      >
        Show 
        3
         more
      </div>
      <div
        className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
        dir={null}
        ref={[Function]}
        style={
          {
            "height": "14px",
            "width": "14px",
          }
        }
      >
        <div
          className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
          dir={null}
          ref={[Function]}
          style={
            {
              "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/chevronDown.png")",
              "filter": "url(#tint-15)",
            }
          }
          suppressHydrationWarning={true}
        />
        <img
          alt=""
          className="css-accessibilityImage-9pa8cd"
          draggable={false}
          ref={
            {
              "current": null,
            }
          }
          src="/Users/tor/Documents/projects/coupl/assets/images/icons/chevronDown.png"
        />
        <svg
          style={
            {
              "height": 0,
              "position": "absolute",
              "visibility": "hidden",
              "width": 0,
            }
          }
        >
          <defs>
            <filter
              id="tint-15"
              suppressHydrationWarning={true}
            >
              <feFlood
                floodColor="#586174"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
              />
            </filter>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`atoms snapshots > DateSectioned — two sections, both open 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginBottom": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(216,206,189,1.00)",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "gap": "10px",
          "marginBottom": "8px",
          "paddingBottom": "8px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
        ref={[Function]}
        style={
          {
            "backgroundColor": "rgba(217,107,82,1.00)",
            "borderBottomLeftRadius": "3px",
            "borderBottomRightRadius": "3px",
            "borderTopLeftRadius": "3px",
            "borderTopRightRadius": "3px",
            "height": "6px",
            "width": "6px",
          }
        }
      />
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
            "letterSpacing": "1.6px",
            "textTransform": "uppercase",
          }
        }
      >
        Today
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
            "flex": 1,
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
          }
        }
      >
        2
      </div>
    </div>
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "gap": "10px",
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
      >
        a
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
      >
        b
      </div>
    </div>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginBottom": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "rgba(216,206,189,1.00)",
          "borderBottomWidth": "1px",
          "flexDirection": "row",
          "gap": "10px",
          "marginBottom": "8px",
          "paddingBottom": "8px",
          "paddingTop": "8px",
        }
      }
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
        ref={[Function]}
        style={
          {
            "backgroundColor": "rgba(217,107,82,1.00)",
            "borderBottomLeftRadius": "3px",
            "borderBottomRightRadius": "3px",
            "borderTopLeftRadius": "3px",
            "borderTopRightRadius": "3px",
            "height": "6px",
            "width": "6px",
          }
        }
      />
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
            "letterSpacing": "1.6px",
            "textTransform": "uppercase",
          }
        }
      >
        Yesterday
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
            "flex": 1,
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
          }
        }
      >
        1
      </div>
    </div>
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "gap": "10px",
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
      >
        c
      </div>
    </div>
  </div>
</div>
`;

exports[`atoms snapshots > Display — numeric size 1`] = `
<div
  className="css-text-146c3p1"
  dir="auto"
  ref={[Function]}
  style={
    {
      "color": "rgba(33,36,55,1.00)",
      "fontFamily": "BitcountPropSingle_700Bold",
      "fontSize": "40px",
      "letterSpacing": "0px",
      "lineHeight": "38px",
    }
  }
>
  Tasks
</div>
`;

exports[`atoms snapshots > IconTile — custom size + palette 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(68,0,34,1.00)",
      "borderBottomLeftRadius": "16px",
      "borderBottomRightRadius": "16px",
      "borderTopLeftRadius": "16px",
      "borderTopRightRadius": "16px",
      "height": "48px",
      "justifyContent": "center",
      "width": "48px",
    }
  }
>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    ref={[Function]}
    style={
      {
        "height": "24px",
        "width": "24px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      ref={[Function]}
      style={
        {
          "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/heart.png")",
          "filter": "url(#tint-2)",
        }
      }
      suppressHydrationWarning={true}
    />
    <img
      alt=""
      className="css-accessibilityImage-9pa8cd"
      draggable={false}
      ref={
        {
          "current": null,
        }
      }
      src="/Users/tor/Documents/projects/coupl/assets/images/icons/heart.png"
    />
    <svg
      style={
        {
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    >
      <defs>
        <filter
          id="tint-2"
          suppressHydrationWarning={true}
        >
          <feFlood
            floodColor="#fdd"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
          />
        </filter>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`atoms snapshots > IconTile — default 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(236,225,200,1.00)",
      "borderBottomLeftRadius": "11px",
      "borderBottomRightRadius": "11px",
      "borderTopLeftRadius": "11px",
      "borderTopRightRadius": "11px",
      "height": "36px",
      "justifyContent": "center",
      "width": "36px",
    }
  }
>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    ref={[Function]}
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      ref={[Function]}
      style={
        {
          "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/bell.png")",
          "filter": "url(#tint-0)",
        }
      }
      suppressHydrationWarning={true}
    />
    <img
      alt=""
      className="css-accessibilityImage-9pa8cd"
      draggable={false}
      ref={
        {
          "current": null,
        }
      }
      src="/Users/tor/Documents/projects/coupl/assets/images/icons/bell.png"
    />
    <svg
      style={
        {
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    >
      <defs>
        <filter
          id="tint-0"
          suppressHydrationWarning={true}
        >
          <feFlood
            floodColor="#D96B52"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
          />
        </filter>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`atoms snapshots > Overline — default 1`] = `
<div
  className="css-text-146c3p1"
  dir="auto"
  ref={[Function]}
  style={
    {
      "color": "rgba(131,125,141,1.00)",
      "fontFamily": "Geist_700Bold",
      "fontSize": "10px",
      "letterSpacing": "1.4px",
      "textTransform": "uppercase",
    }
  }
>
  Hello
</div>
`;

exports[`atoms snapshots > Pill — active sm 1`] = `
<AnimatedView
  style={
    [
      {
        "alignSelf": "flex-start",
      },
      {
        "transform": [
          {
            "scale": 1.04,
          },
        ],
      },
    ]
  }
>
  <div
    className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
    dir={null}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    ref={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "backgroundColor": "rgba(236,225,200,1.00)",
        "borderBottomColor": "rgba(217,107,82,1.00)",
        "borderBottomLeftRadius": "999px",
        "borderBottomRightRadius": "999px",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(217,107,82,1.00)",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(217,107,82,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(217,107,82,1.00)",
        "borderTopLeftRadius": "999px",
        "borderTopRightRadius": "999px",
        "borderTopWidth": "1px",
        "paddingBottom": "6px",
        "paddingLeft": "12px",
        "paddingRight": "12px",
        "paddingTop": "6px",
        "transform": "scale(1)",
      }
    }
    tabIndex={0}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      ref={[Function]}
      style={
        {
          "color": "rgba(217,107,82,1.00)",
          "fontFamily": "Geist_700Bold",
          "fontSize": "11px",
          "letterSpacing": "0.3px",
          "textTransform": "uppercase",
        }
      }
    >
      Active
    </div>
  </div>
</AnimatedView>
`;

exports[`atoms snapshots > Pill — inactive md 1`] = `
<AnimatedView
  style={
    [
      {
        "alignSelf": "flex-start",
      },
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
>
  <div
    className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
    dir={null}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    ref={[Function]}
    style={
      {
        "alignSelf": "flex-start",
        "backgroundColor": "rgba(0,0,0,0.00)",
        "borderBottomColor": "rgba(216,206,189,1.00)",
        "borderBottomLeftRadius": "999px",
        "borderBottomRightRadius": "999px",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(216,206,189,1.00)",
        "borderLeftWidth": "1px",
        "borderRightColor": "rgba(216,206,189,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(216,206,189,1.00)",
        "borderTopLeftRadius": "999px",
        "borderTopRightRadius": "999px",
        "borderTopWidth": "1px",
        "paddingBottom": "8px",
        "paddingLeft": "14px",
        "paddingRight": "14px",
        "paddingTop": "8px",
        "transform": "scale(1)",
      }
    }
    tabIndex={0}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      ref={[Function]}
      style={
        {
          "color": "rgba(88,97,116,1.00)",
          "fontFamily": "Geist_700Bold",
          "fontSize": "12px",
          "letterSpacing": "0.3px",
          "textTransform": "uppercase",
        }
      }
    >
      Tag
    </div>
  </div>
</AnimatedView>
`;

exports[`atoms snapshots > PrimaryButton — disabled with icon 1`] = `
<div
  aria-disabled={true}
  className="css-view-g5y9jx r-pointerEvents-12vffkv"
  dir={null}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(255,255,255,1.00)",
      "borderBottomLeftRadius": "999px",
      "borderBottomRightRadius": "999px",
      "borderTopLeftRadius": "999px",
      "borderTopRightRadius": "999px",
      "flexDirection": "row",
      "gap": "8px",
      "height": "54px",
      "justifyContent": "center",
      "width": "100%",
    }
  }
  tabIndex={-1}
>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    ref={[Function]}
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      ref={[Function]}
      style={
        {
          "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/check.png")",
          "filter": "url(#tint-4)",
        }
      }
      suppressHydrationWarning={true}
    />
    <img
      alt=""
      className="css-accessibilityImage-9pa8cd"
      draggable={false}
      ref={
        {
          "current": null,
        }
      }
      src="/Users/tor/Documents/projects/coupl/assets/images/icons/check.png"
    />
    <svg
      style={
        {
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    >
      <defs>
        <filter
          id="tint-4"
          suppressHydrationWarning={true}
        >
          <feFlood
            floodColor="#837D8D"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
          />
        </filter>
      </defs>
    </svg>
  </div>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(131,125,141,1.00)",
        "fontFamily": "BitcountPropSingle_700Bold",
        "fontSize": "16px",
        "letterSpacing": "0.3px",
        "textTransform": "uppercase",
      }
    }
  >
    Locked
  </div>
</div>
`;

exports[`atoms snapshots > PrimaryButton — enabled, no icon 1`] = `
<div
  className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
  dir={null}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(217,107,82,1.00)",
      "borderBottomLeftRadius": "999px",
      "borderBottomRightRadius": "999px",
      "borderTopLeftRadius": "999px",
      "borderTopRightRadius": "999px",
      "flexDirection": "row",
      "gap": "8px",
      "height": "54px",
      "justifyContent": "center",
      "transform": "scale(1)",
      "width": "100%",
    }
  }
  tabIndex={0}
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(59,29,18,1.00)",
        "fontFamily": "BitcountPropSingle_700Bold",
        "fontSize": "16px",
        "letterSpacing": "0.3px",
        "textTransform": "uppercase",
      }
    }
  >
    Save
  </div>
</div>
`;

exports[`atoms snapshots > ProgressRing — default 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "height": "90px",
      "justifyContent": "center",
      "width": "90px",
    }
  }
>
  <Svg
    height={90}
    style={
      {
        "transform": [
          {
            "rotate": "-90deg",
          },
        ],
      }
    }
    width={90}
  >
    <Defs>
      <LinearGradient
        id="rg-90"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="100%"
      >
        <Stop
          offset="0%"
          stopColor="#D88B74"
        />
        <Stop
          offset="50%"
          stopColor="#C5A954"
        />
        <Stop
          offset="100%"
          stopColor="#A89BC8"
        />
      </LinearGradient>
    </Defs>
    <Circle
      cx={45}
      cy={45}
      fill="none"
      r={41}
      stroke="rgba(255,255,255,0.2)"
      strokeWidth={8}
    />
    <Circle
      animatedProps={
        {
          "strokeDashoffset": 257.610597594363,
        }
      }
      cx={45}
      cy={45}
      fill="none"
      r={41}
      stroke="url(#rg-90)"
      strokeDasharray="257.610597594363 257.610597594363"
      strokeLinecap="round"
      strokeWidth={8}
    />
  </Svg>
</div>
`;

exports[`atoms snapshots > ProgressRing — with label + custom colors 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "height": "120px",
      "justifyContent": "center",
      "width": "120px",
    }
  }
>
  <Svg
    height={120}
    style={
      {
        "transform": [
          {
            "rotate": "-90deg",
          },
        ],
      }
    }
    width={120}
  >
    <Defs>
      <LinearGradient
        id="rg-120"
        x1="0%"
        x2="100%"
        y1="0%"
        y2="100%"
      >
        <Stop
          offset="0%"
          stopColor="#f00"
        />
        <Stop
          offset="100%"
          stopColor="#0f0"
        />
      </LinearGradient>
    </Defs>
    <Circle
      cx={60}
      cy={60}
      fill="none"
      r={55}
      stroke="rgba(255,255,255,0.2)"
      strokeWidth={10}
    />
    <Circle
      animatedProps={
        {
          "strokeDashoffset": 345.57519189487726,
        }
      }
      cx={60}
      cy={60}
      fill="none"
      r={55}
      stroke="url(#rg-120)"
      strokeDasharray="345.57519189487726 345.57519189487726"
      strokeLinecap="round"
      strokeWidth={10}
    />
  </Svg>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(59,29,18,1.00)",
        "fontFamily": "BitcountPropSingle_700Bold",
        "fontSize": "31.200000000000003px",
        "fontVariant": "tabular-nums",
        "letterSpacing": "0px",
        "position": "absolute",
      }
    }
  >
    50%
  </div>
</div>
`;

exports[`atoms snapshots > RoundBtn — borderless + custom size 1`] = `
<div
  className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
  dir={null}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(17,17,17,1.00)",
      "borderBottomColor": "rgba(0,0,0,0.00)",
      "borderBottomLeftRadius": "28px",
      "borderBottomRightRadius": "28px",
      "borderBottomWidth": "0px",
      "borderLeftColor": "rgba(0,0,0,0.00)",
      "borderLeftWidth": "0px",
      "borderRightColor": "rgba(0,0,0,0.00)",
      "borderRightWidth": "0px",
      "borderTopColor": "rgba(0,0,0,0.00)",
      "borderTopLeftRadius": "28px",
      "borderTopRightRadius": "28px",
      "borderTopWidth": "0px",
      "height": "56px",
      "justifyContent": "center",
      "transform": "scale(1)",
      "width": "56px",
    }
  }
  tabIndex={0}
>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    ref={[Function]}
    style={
      {
        "height": "25.2px",
        "width": "25.2px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      ref={[Function]}
      style={
        {
          "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/x.png")",
          "filter": "url(#tint-8)",
        }
      }
      suppressHydrationWarning={true}
    />
    <img
      alt=""
      className="css-accessibilityImage-9pa8cd"
      draggable={false}
      ref={
        {
          "current": null,
        }
      }
      src="/Users/tor/Documents/projects/coupl/assets/images/icons/x.png"
    />
    <svg
      style={
        {
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    >
      <defs>
        <filter
          id="tint-8"
          suppressHydrationWarning={true}
        >
          <feFlood
            floodColor="#fff"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
          />
        </filter>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`atoms snapshots > RoundBtn — default border 1`] = `
<div
  className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
  dir={null}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(255,253,248,1.00)",
      "borderBottomColor": "rgba(216,206,189,1.00)",
      "borderBottomLeftRadius": "20px",
      "borderBottomRightRadius": "20px",
      "borderBottomWidth": "1px",
      "borderLeftColor": "rgba(216,206,189,1.00)",
      "borderLeftWidth": "1px",
      "borderRightColor": "rgba(216,206,189,1.00)",
      "borderRightWidth": "1px",
      "borderTopColor": "rgba(216,206,189,1.00)",
      "borderTopLeftRadius": "20px",
      "borderTopRightRadius": "20px",
      "borderTopWidth": "1px",
      "height": "40px",
      "justifyContent": "center",
      "transform": "scale(1)",
      "width": "40px",
    }
  }
  tabIndex={0}
>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    ref={[Function]}
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      ref={[Function]}
      style={
        {
          "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/plus.png")",
          "filter": "url(#tint-6)",
        }
      }
      suppressHydrationWarning={true}
    />
    <img
      alt=""
      className="css-accessibilityImage-9pa8cd"
      draggable={false}
      ref={
        {
          "current": null,
        }
      }
      src="/Users/tor/Documents/projects/coupl/assets/images/icons/plus.png"
    />
    <svg
      style={
        {
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    >
      <defs>
        <filter
          id="tint-6"
          suppressHydrationWarning={true}
        >
          <feFlood
            floodColor="#212437"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
          />
        </filter>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`atoms snapshots > ScreenHeader — eyebrow + meta + custom accent 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "marginBottom": "18px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(131,125,141,1.00)",
            "fontFamily": "Geist_700Bold",
            "fontSize": "10px",
            "letterSpacing": "1.4px",
            "marginBottom": "8px",
            "textTransform": "uppercase",
          }
        }
      >
        02 · TASKS
      </div>
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "BitcountPropSingle_700Bold",
            "fontSize": "42px",
            "letterSpacing": "0px",
            "lineHeight": "41.16px",
          }
        }
      >
        Today
        <AnimatedText
          style={
            [
              {
                "color": "#f0c050",
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          .
        </AnimatedText>
      </div>
    </div>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginTop": "10px",
      }
    }
  >
    <Svg
      height={8}
      opacity={0.75}
      viewBox="0 0 96 8"
      width={96}
    >
      <Path
        d="M0 4 Q 12 0, 24 4 T 48 4 T 72 4 T 96 4"
        fill="none"
        stroke="#f0c050"
        strokeLinecap="round"
        strokeWidth={2}
      />
    </Svg>
  </div>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(88,97,116,1.00)",
        "fontFamily": "Geist_500Medium",
        "fontSize": "11px",
        "letterSpacing": "0.4px",
        "marginTop": "10px",
      }
    }
  >
    4 open
  </div>
</div>
`;

exports[`atoms snapshots > ScreenHeader — title only 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "marginBottom": "18px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
      ref={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        ref={[Function]}
        style={
          {
            "color": "rgba(33,36,55,1.00)",
            "fontFamily": "BitcountPropSingle_700Bold",
            "fontSize": "42px",
            "letterSpacing": "0px",
            "lineHeight": "41.16px",
          }
        }
      >
        Tasks
        <AnimatedText
          style={
            [
              {
                "color": "#D96B52",
              },
              {
                "opacity": 1,
              },
            ]
          }
        >
          .
        </AnimatedText>
      </div>
    </div>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "marginTop": "10px",
      }
    }
  >
    <Svg
      height={8}
      opacity={0.75}
      viewBox="0 0 96 8"
      width={96}
    >
      <Path
        d="M0 4 Q 12 0, 24 4 T 48 4 T 72 4 T 96 4"
        fill="none"
        stroke="#D96B52"
        strokeLinecap="round"
        strokeWidth={2}
      />
    </Svg>
  </div>
</div>
`;

exports[`atoms snapshots > SectionHeader — label only 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": "12px",
      "paddingLeft": "4px",
      "paddingRight": "4px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(131,125,141,1.00)",
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
        "letterSpacing": "1.4px",
        "textTransform": "uppercase",
      }
    }
  >
    Today
  </div>
</div>
`;

exports[`atoms snapshots > SectionHeader — with action 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": "12px",
      "paddingLeft": "4px",
      "paddingRight": "4px",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(131,125,141,1.00)",
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
        "letterSpacing": "1.4px",
        "textTransform": "uppercase",
      }
    }
  >
    Today
  </div>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
  >
    All
  </div>
</div>
`;

exports[`atoms snapshots > StickyDate — collapsible closed 1`] = `
<div
  className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
  dir={null}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "rgba(216,206,189,1.00)",
      "borderBottomWidth": "1px",
      "flexDirection": "row",
      "gap": "10px",
      "marginBottom": "8px",
      "paddingBottom": "8px",
      "paddingTop": "8px",
    }
  }
  tabIndex={0}
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "backgroundColor": "rgba(217,107,82,1.00)",
        "borderBottomLeftRadius": "3px",
        "borderBottomRightRadius": "3px",
        "borderTopLeftRadius": "3px",
        "borderTopRightRadius": "3px",
        "height": "6px",
        "width": "6px",
      }
    }
  />
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(33,36,55,1.00)",
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
        "letterSpacing": "1.6px",
        "textTransform": "uppercase",
      }
    }
  >
    Older
  </div>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(131,125,141,1.00)",
        "flex": 1,
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
      }
    }
  >
    12
  </div>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    ref={[Function]}
    style={
      {
        "height": "14px",
        "width": "14px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      ref={[Function]}
      style={
        {
          "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/chevronRight.png")",
          "filter": "url(#tint-12)",
        }
      }
      suppressHydrationWarning={true}
    />
    <img
      alt=""
      className="css-accessibilityImage-9pa8cd"
      draggable={false}
      ref={
        {
          "current": null,
        }
      }
      src="/Users/tor/Documents/projects/coupl/assets/images/icons/chevronRight.png"
    />
    <svg
      style={
        {
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    >
      <defs>
        <filter
          id="tint-12"
          suppressHydrationWarning={true}
        >
          <feFlood
            floodColor="#837D8D"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
          />
        </filter>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`atoms snapshots > StickyDate — collapsible open 1`] = `
<div
  className="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
  dir={null}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "rgba(216,206,189,1.00)",
      "borderBottomWidth": "1px",
      "flexDirection": "row",
      "gap": "10px",
      "marginBottom": "8px",
      "paddingBottom": "8px",
      "paddingTop": "8px",
    }
  }
  tabIndex={0}
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "backgroundColor": "rgba(217,107,82,1.00)",
        "borderBottomLeftRadius": "3px",
        "borderBottomRightRadius": "3px",
        "borderTopLeftRadius": "3px",
        "borderTopRightRadius": "3px",
        "height": "6px",
        "width": "6px",
      }
    }
  />
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(33,36,55,1.00)",
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
        "letterSpacing": "1.6px",
        "textTransform": "uppercase",
      }
    }
  >
    Yesterday
  </div>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(131,125,141,1.00)",
        "flex": 1,
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
      }
    }
  >
    7
  </div>
  <div
    className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
    dir={null}
    ref={[Function]}
    style={
      {
        "height": "14px",
        "width": "14px",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
      dir={null}
      ref={[Function]}
      style={
        {
          "backgroundImage": "url("/Users/tor/Documents/projects/coupl/assets/images/icons/chevronDown.png")",
          "filter": "url(#tint-10)",
        }
      }
      suppressHydrationWarning={true}
    />
    <img
      alt=""
      className="css-accessibilityImage-9pa8cd"
      draggable={false}
      ref={
        {
          "current": null,
        }
      }
      src="/Users/tor/Documents/projects/coupl/assets/images/icons/chevronDown.png"
    />
    <svg
      style={
        {
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    >
      <defs>
        <filter
          id="tint-10"
          suppressHydrationWarning={true}
        >
          <feFlood
            floodColor="#837D8D"
          />
          <feComposite
            in2="SourceAlpha"
            operator="in"
          />
        </filter>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`atoms snapshots > StickyDate — static label 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "rgba(216,206,189,1.00)",
      "borderBottomWidth": "1px",
      "flexDirection": "row",
      "gap": "10px",
      "marginBottom": "8px",
      "paddingBottom": "8px",
      "paddingTop": "8px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    ref={[Function]}
    style={
      {
        "backgroundColor": "rgba(217,107,82,1.00)",
        "borderBottomLeftRadius": "3px",
        "borderBottomRightRadius": "3px",
        "borderTopLeftRadius": "3px",
        "borderTopRightRadius": "3px",
        "height": "6px",
        "width": "6px",
      }
    }
  />
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(33,36,55,1.00)",
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
        "letterSpacing": "1.6px",
        "textTransform": "uppercase",
      }
    }
  >
    Today
  </div>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(131,125,141,1.00)",
        "flex": 1,
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`atoms snapshots > TripleRing — custom values 1`] = `
<Svg
  height={140}
  style={
    {
      "transform": [
        {
          "rotate": "-90deg",
        },
      ],
    }
  }
  width={140}
>
  <Circle
    cx={70}
    cy={70}
    fill="none"
    r={66}
    stroke="rgba(0,0,0,0.25)"
    strokeWidth={8}
  />
  <Circle
    cx={70}
    cy={70}
    fill="none"
    r={66}
    stroke="#D88B74"
    strokeDasharray="414.6902302738527 414.6902302738527"
    strokeDashoffset={290.2831611916969}
    strokeLinecap="round"
    strokeWidth={8}
  />
  <Circle
    cx={70}
    cy={70}
    fill="none"
    r={54}
    stroke="rgba(0,0,0,0.25)"
    strokeWidth={8}
  />
  <Circle
    cx={70}
    cy={70}
    fill="none"
    r={54}
    stroke="#C5A954"
    strokeDasharray="339.29200658769764 339.29200658769764"
    strokeDashoffset={135.71680263507906}
    strokeLinecap="round"
    strokeWidth={8}
  />
  <Circle
    cx={70}
    cy={70}
    fill="none"
    r={42}
    stroke="rgba(0,0,0,0.25)"
    strokeWidth={8}
  />
  <Circle
    cx={70}
    cy={70}
    fill="none"
    r={42}
    stroke="#A89BC8"
    strokeDasharray="263.89378290154264 263.89378290154264"
    strokeDashoffset={26.38937829015426}
    strokeLinecap="round"
    strokeWidth={8}
  />
</Svg>
`;

exports[`atoms snapshots > TripleRing — default 1`] = `
<Svg
  height={96}
  style={
    {
      "transform": [
        {
          "rotate": "-90deg",
        },
      ],
    }
  }
  width={96}
>
  <Circle
    cx={48}
    cy={48}
    fill="none"
    r={43}
    stroke="rgba(0,0,0,0.25)"
    strokeWidth={10}
  />
  <Circle
    cx={48}
    cy={48}
    fill="none"
    r={43}
    stroke="#D88B74"
    strokeDasharray="270.1769682087222 270.1769682087222"
    strokeDashoffset={48.63185427757001}
    strokeLinecap="round"
    strokeWidth={10}
  />
  <Circle
    cx={48}
    cy={48}
    fill="none"
    r={30}
    stroke="rgba(0,0,0,0.25)"
    strokeWidth={10}
  />
  <Circle
    cx={48}
    cy={48}
    fill="none"
    r={30}
    stroke="#C5A954"
    strokeDasharray="188.49555921538757 188.49555921538757"
    strokeDashoffset={65.97344572538564}
    strokeLinecap="round"
    strokeWidth={10}
  />
  <Circle
    cx={48}
    cy={48}
    fill="none"
    r={17}
    stroke="rgba(0,0,0,0.25)"
    strokeWidth={10}
  />
  <Circle
    cx={48}
    cy={48}
    fill="none"
    r={17}
    stroke="#A89BC8"
    strokeDasharray="106.81415022205297 106.81415022205297"
    strokeDashoffset={10.681415022205295}
    strokeLinecap="round"
    strokeWidth={10}
  />
</Svg>
`;

exports[`atoms snapshots > WavyUnderline — custom width + color + opacity 1`] = `
<Svg
  height={8}
  opacity={0.3}
  viewBox="0 0 200 8"
  width={200}
>
  <Path
    d="M0 4 Q 25 0, 50 4 T 100 4 T 150 4 T 200 4"
    fill="none"
    stroke="#ff00ff"
    strokeLinecap="round"
    strokeWidth={2}
  />
</Svg>
`;

exports[`atoms snapshots > WavyUnderline — default 1`] = `
<Svg
  height={8}
  opacity={0.75}
  viewBox="0 0 130 8"
  width={130}
>
  <Path
    d="M0 4 Q 16.25 0, 32.5 4 T 65 4 T 97.5 4 T 130 4"
    fill="none"
    stroke="#D96B52"
    strokeLinecap="round"
    strokeWidth={2}
  />
</Svg>
`;

exports[`atoms snapshots > contains a View for composition sanity 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
  ref={[Function]}
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    ref={[Function]}
    style={
      {
        "color": "rgba(131,125,141,1.00)",
        "fontFamily": "Geist_700Bold",
        "fontSize": "10px",
        "letterSpacing": "1.4px",
        "textTransform": "uppercase",
      }
    }
  >
    group
  </div>
</div>
`;
